--- a/style.css
+++ b/style.css
@@ -14,46 +14,79 @@ body {
 }
 
 #startButton, #restart {
-    margin-bottom: 40px;
-    margin-right: 40px;
+    margin-bottom: 50px;
+    margin-right: 50px;
     display: inline-block;
     border-radius: 3px;
 }
 
 #startButton:hover, #restart:hover {
-    background-color: grey;
-    
+    background-color: grey;  
 }
 
 #grid {
-    display: flex;
-    flex-direction: column;
-    align-items: center; 
+    display: grid;
+    grid-template-rows: repeat(15, 60px);
+    grid-template-columns: repeat(15, 60px);
+    gap: 1px;
 }
-
 .row {
     display: flex;
 }
 
 .cell {
-    width: 60px; 
-    height: 60px; 
-    border: 1px solid black;
-    box-sizing: border-box;
+    position: relative;
+  border: 1px solid #ddd;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  font-weight: bold;
+  font-size: 28px;
 }
 
+.cost {
+    position: absolute;
+    font-size: 14px; 
+    font-weight: bold; 
+    color: black;
+  }
+
+
+.g-cost {
+    top: 0;
+    left: 0;
+}
+
+.h-cost {
+    top: 0;
+    right: 0;
+}
+
+.f-cost {
+    bottom: 0;
+    left: 0;
+}
 .walkable {
     background-color: white;
 }
-
 .obstacle {
     background-color: black;
 }
-
-.start{
+.start {
+    background-color: red;
+    top:0;
+    bottom: 0;
+}
+.end {
     background-color: green;
 }
-
-.end {
-    background-color: blueviolet;
+.path {
+    background-color: yellow;
+}
+.closed {
+    background-color: lightcoral;
+}
+.open {
+    background-color: lightgreen;
 }
