--- a/style.css
+++ b/style.css
@@ -13,14 +13,14 @@ body {
     margin-bottom: 20px; 
 }
 
-#startButton, #restart {
+#startButton, #startSlowButton, #restart {
     margin-bottom: 50px;
     margin-right: 50px;
     display: inline-block;
     border-radius: 3px;
 }
 
-#startButton:hover, #restart:hover {
+#startButton:hover, #startSlowButton:hover, #restart:hover {
     background-color: grey;  
 }
 
